corrected lastname issue and center alignment of form

--- a/contact/forms.css
+++ b/contact/forms.css
@@ -136,20 +136,15 @@ label.supp{
 
     /* this is the media query part of desktop view */
    @media screen and (min-width :768px) {
-    label.firstname{
-        width: auto;
-        display: block;
+    .row{  /* .row container ko flex container bna deta h and jitne bhi andar element hote h vo child elemnet ban jate h , wo flex items ban jate h*/
+        display: flex; /* isse wo items horizontally(default) line-up  , side by side */
+        gap: 16px; /*  gap deta h flex items ke bich matlab jo column h unke beech  */
     }
-    input.firstname{
-        width: auto;
-        display: inline;
-    }
-    label.lastname{
-        display: inline;
-    }
-     input.lastname{
-        width: auto;
-        display: inline-block;   
+    /* .row ke andar jo .column element h wo horizontally ek line me aur gap ke sath  */
+    .colum{
+        flex: 1; /*ye har .column item ko equally space deta h*/
+        display: flex; /*.column bhi ek flex container ban raha h apne andar ke element ke liye matalb ye label and input ko arrange krega */
+        flex-direction: column; /*by default horizontal hota h isliye vertical bnaya */
     }
     label.email{
         width: auto;
@@ -200,5 +195,20 @@ label.supp{
 }
   label.message{
     display: block;
-    }    
+    }
+    body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    margin: 0;    
+    background-color: #eafaf2;;
+}
+div.formcontainer{
+    width: auto;
+    background-color: #fff;
+    margin: 50px auto; /* for center alignment of form , left-right se margin auto kr do*/
+    padding: 20px 40px ;
+    max-width: 600px;
+    border-radius: 5px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.603);
+}    
    }
